[package]
name = "capella"
version = "0.1.3"
authors = ["Garrett Squire <garrettsquire@gmail.com>"]
description = "An asynchronous StatsD clone"
keywords = ["async", "metrics"]
repository = "https://github.com/rggr/capella"
documentation = "https://docs.rs/capella"
license = "MIT"

[dependencies]
chrono = "0.3"
dotenv = "0.10"
env_logger = "0.4"
futures = "0.1"
lazy_static = "0.2"
log = "0.3"
regex = "0.2"
tokio-core = "0.1"
tokio-io = "0.1"
tokio-timer = "0.1"
